ingress-demo/hello-world-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: hello-world
spec:
 replicas: 2
 template:
   metadata:
     labels:
       app: hello-world
       version: 0.1.7
   spec:
     containers:
     - name: hello-world
       image: quay.io/swade1987/hello-world:0.1.7
       imagePullPolicy: Always
       readinessProbe:
         httpGet:
           path: /
           port: 8080
       livenessProbe:
         httpGet:
           path: /
           port: 8080
         initialDelaySeconds: 30
         timeoutSeconds: 1
       ports:
       - containerPort: 8080
