ingress-demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: hello-world
spec:
 rules:
 - http:
     paths:
     - path: /
       backend:
         serviceName: hello-world
         servicePort: 8080
   host: hello-world.192.168.99.100.nip.io
